# ourdigest

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
ops/ourdigest/: install_runtime_venv.sh  ourdigest-refresh.service  ourdigest-refresh.timer  ourdigest-server.service
src/ourdigest/: __init__.py  cli.py  config.py  feed.py  fetcher.py  models.py  server.py  storage.py  summarizer.py
src/ourdigest/sources/: __init__.py  arxiv.py  base.py  googlenews.py  hackernews.py  lemmy.py  reddit.py  reddit_oauth.py
tests/: test_config.py  test_e2e.py  test_feed_filters.py  test_models.py  test_sources_reddit.py  test_storage.py
